# taxpasta

./: .bandit  .cruft.json  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  MANIFEST.in  Makefile  README.md  README.rst  bandit.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tax_summary.ipynb  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  SUPPORT.rst  dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.md  01-bug-report.yml  02-question.md  02-question.yml  03-feature-request.md  03-feature-request.yml  config.yml
.github/workflows/: cron.yml  draft-pdf.yml  main.yml  release.yml  test.yml
docs/: .pages  api.md  faq.md  index.md  requirements.txt  tutorial.html  tutorial.md  tutorial.qmd
docs/adr/: 0001-record-architecture-decisions.md  0002-use-integer-taxonomy-identifiers.md  0003-python-3-6-only.md
docs/api/: application.md  domain.md  infrastructure.md
docs/commands/: .pages  consensus.md  index.md  merge.md  standardise.md
docs/contributing/: index.md  supporting_new_profiler.md  taxpasta_profiler_support_overview.puml
docs/how-tos/: bash_snippets.md  bash_snippets.qmd  how-to-add-names.md  how-to-customise-sample-names.md  how-to-merge-across-classifiers.md  how-to-merge-across-profilers.md
docs/quick_reference/: .pages  consensus.md  consensus_help.txt  index.md  merge.md  merge_help.txt  standardise.md  standardise_help.txt
docs/source/: conf.py  index.rst
docs/supported_profilers/: .pages  bracken.md  centrifuge.md  diamond.md  ganon.md  index.md  kaiju.md  kmcp.md  kraken2.md  krakenuniq.md  malt.md  megan6.md  metaphlan.md  motus.md  terminology.md
docs/supported_tools/: bracken.md  centrifuge.md  diamond.md  kaiju.md  kraken2.md  krakenuniq.md  malt.md  metaphlan.md  motus.md
docs/tutorials/: .gitignore  .pages  deepdive.md  getting-started.md  howto-adding-taxon-names.md  howto-custom-sample-names.md  index.md  tutorial.md  tutorial.qmd  tutorial_bash_snippets.md  tutorial_bash_snippets.qmd  tutorial_python_snippets.md  tutorial_python_snippets.qmd  tutorial_r_snippets.md  tutorial_r_snippets.qmd
paper/: .gitignore  paper.bib  paper.md
requirements/: requirements-audit.txt  requirements-dev.txt  requirements-distribution.txt  requirements-docs.txt  requirements-style.txt  requirements-tests.py3.11.txt  requirements-tests.py3.12.txt  requirements-tests.py3.13.txt  requirements-tests.py3.14.txt  requirements-types.txt
src/taxpasta/: __init__.py  __main__.py  helpers.py
src/taxpasta/application/: __init__.py  _types.py  add_tax_info_command.py  consensus_application.py  profile_reader.py  profile_standardisation_service.py  profile_writer.py  sample_handling_application.py  sample_merging_application.py  sample_merging_service.py  table_reader.py
src/taxpasta/application/error/: __init__.py  standardisation_error.py  taxpasta_error.py
src/taxpasta/domain/: __init__.py  consensus_builder.py  sample.py  sample_merging_service.py  standard_profile.py  tidy_observation_table.py
src/taxpasta/infrastructure/: __init__.py  cli.py  helpers.py
tests/: conftest.py
tests/data/bracken/: 2611_se-ERR5766174-db1_S.tsv  2611_se-ERR5766174-db1_S_invalid.tsv  2612_pe-ERR5766176-db1_S.tsv  2612_pe-ERR5766176_B-db1_S_invalid.tsv  2612_se-ERR5766180-db1_S.tsv  2613_pe-ERR5766181-db1_S.tsv
tests/data/centrifuge/: AD_pe-db1-invalid.centrifuge.txt  barcode52_se-db1.centrifuge.txt
tests/data/diamond/: diamond_invalid_1.tsv  diamond_invalid_2.tsv  diamond_valid_2.tsv
tests/data/ganon/: 2612_pe_ERR5766176_db1.ganon.tre  MOCK_001_Illumina_Hiseq_3000_se_ganon-db.ganon.tre  MOCK_002_Illumina_Hiseq_3000_se_ganon-db.ganon.tre  MOCK_003_Illumina_Hiseq_3000_se_ganon-db.ganon.tre  invalid_2612_pe_ERR5766176_db1.ganon_missing_column.tre
tests/data/kaiju/: barcode41_se-barcode41-invalid.kaiju.txt  barcode41_se-barcode41-kaiju.txt  barcode42_se-barcode42-kaiju.txt
tests/data/kmcp/: 2612_pe_ERR5766176_db1.kmcp_profile.profile  MOCK_001_Illumina_Hiseq_3000.k.profile  MOCK_002_Illumina_Hiseq_3000.k.profile  invalid_2612_pe_ERR5766176_db1.kmcp_profile.profile  invalid_empty.kmcp.profile
tests/data/kraken2/: 2611_se-ERR5766174-db1-invalid.kraken2.report.txt  2612_pe-ERR5766176-db1-invalid.kraken2.report.txt
tests/data/krakenuniq/: ERR3201952.krakenuniq.report.txt  test1-invalid.krakenuniq.report.txt  test1.krakenuniq.report.txt  test2.krakenuniq.report.txt  test3.krakenuniq.report.txt
tests/data/metaphlan/: 2612_se_metaphlan4-db.metaphlan_profile.txt  2613_se_metaphlan4-db.metaphlan_profile.txt  MOCK_001_Illumina_Hiseq_3000_se_metaphlan3-db.metaphlan3_profile.txt  MOCK_001_Minion_R9_se_metaphlan3-db.metaphlan3_profile.txt  MOCK_002_Illumina_Hiseq_3000_se_metaphlan3-db.metaphlan3_profile.txt  MOCK_002_Minion_R9_se_metaphlan3-db.metaphlan3_profile.txt  MOCK_003_Illumina_Hiseq_3000_se_metaphlan3-db.metaphlan3_profile.txt  MOCK_003_Minion_R9_se_metaphlan3-db.metaphlan3_profile.txt  artificial_case.txt  mpa_invalid_abundance_sum.tsv  mpa_invalid_tabs.tsv  mpa_valid_complex.tsv  mpa_valid_simple.tsv
tests/data/motus/: 2612_se-ERR5766180-invalid_db_mOTU.out  B11-2_se_B11_db_mOTU.out  B12-3_se_B12_db_mOTU.out
tests/data/taxonomy/: names.dmp  nodes.dmp
tests/integration/: test_add_tax_info.py  test_bracken_etl.py  test_centrifuge_etl.py  test_cli.py  test_diamond_etl.py  test_ganon_etl.py  test_kaiju_etl.py  test_kmcp_etl.py  test_kraken2_etl.py  test_krakenuniq_etl.py  test_malt_etl.py  test_megan6_etl.py  test_metaphlan.py  test_metaphlan_etl.py  test_motus_etl.py  test_sample_merging_application.py
tests/system/cli/: conftest.py  test_taxpasta.py  test_taxpasta_merge.py  test_taxpasta_standardise.py
tests/test_integration/: test_api.py
tests/test_unit/: test_helpers.py
tests/unit/: test_version.py
tests/unit/application/: test_sample_merging_application.py  test_sample_merging_service.py
tests/unit/domain/: test_sample_merging_service.py
(+192 files in other folders)
