################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "taxpasta"
description = "TAXonomic Profile Aggregation and STAndardisation"
authors = [
    { name = "Moritz E. Beber", email = "moritz.beber@posteo.de"},
    { name = "Maxime Borry", email = "maxime_borry@eva.mpg.de"},
    { name = "James A. Fellows Yates", email = "jfy133@gmail.com"},
    { name = "Sofia Stamouli", email = "sofia.stamouli@scilifelab.se"},
]
license = "Apache-2.0"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.8"
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
keywords = [
    "bioinformatics",
    "metagenomics",
    "profiling",
    "classification",
    "taxonomy",
    "metagenomic profile",
    "taxonomic profile",
    "standardisation",
    "merging",
]
dynamic = ["version"]
dependencies = [
    "depinfo ~=2.2",
    "numpy ~=1.20",
    "pandas ~=1.4",
    "pandera ~=0.14",
    "taxopy ~=0.10",
    "typer ~=0.6",
]

[project.urls]
Homepage = "https://github.com/taxprofiler/taxpasta"
Documentation = "https://taxpasta.readthedocs.io"
"Source Code" = "https://github.com/taxprofiler/taxpasta"
"Bug Tracker" = "https://github.com/taxprofiler/taxpasta/issues"
Download = "https://pypi.org/project/taxpasta/#files"

[project.scripts]
taxpasta = "taxpasta.infrastructure.cli:app"

[project.optional-dependencies]
all = [
    "biom-format",
    "odfpy",
    "openpyxl",
    "pyarrow",
    "rich",
]
arrow = ["pyarrow"]
biom = ["biom-format"]
ods = ["odfpy"]
parquet = ["pyarrow"]
rich = ["rich"]
xlsx = ["openpyxl"]
dev = [
    "bash-kernel",
    "jupyter",
    "mkdocs-awesome-pages-plugin ~=2.8",
    "mkdocs-exclude ~=1.0",
    "mkdocs-material ~=9.1",
    "mkdocstrings[python] ~=0.20",
    "pre-commit",
    "tabulate ~=0.9",
    "tox ~=4.0",
]

################################################################################
# Tool Configuration
################################################################################

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/taxpasta"]

[tool.hatch.build.hooks.vcs]
version-file = "src/taxpasta/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.bandit.assert_used]
skips = ["*/test_*.py"]

[tool.black]
line-length = 88
python-version = ["py311"]
extend-exclude = '''
(
    _version.py
)
'''

[tool.isort]
profile = "black"
lines_after_imports = 2
lines_before_imports = 2
known_first_party = "taxpasta"
skip = ["__init__.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["raises"]

[tool.coverage.paths]
source = [
    "src/taxpasta",
    "*/site-packages/taxpasta",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
precision = 2

[[tool.mypy.overrides]]
module = [
    "biom",
    "biom.table",
    "biom.util",
    "numpy",
    "odf",
    "openpyxl",
    "pandas",
    "pandas.errors",
    "pandera",
    "pandera.errors",
    "pandera.typing",
    "pyarrow",
    "rich.logging",
    "taxopy",
    "taxopy.exceptions",
    "typer",
]
ignore_missing_imports = true
