################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "taxpasta"
dynamic = ["version"]
description = "TAXonomic Profile Aggregation and STAndardisation"
authors = [
    { name = "Moritz E. Beber", email = "moritz.beber@igdore.org"},
    { name = "Maxime Borry", email = "maxime_borry@eva.mpg.de"},
    { name = "James A. Fellows Yates", email = "jfy133@gmail.com"},
    { name = "Sofia Stamouli", email = "sofia.stamouli@scilifelab.se"},
]
license = "Apache-2.0"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.11"
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
keywords = [
    "bioinformatics",
    "metagenomics",
    "profiling",
    "classification",
    "taxonomy",
    "metagenomic profile",
    "taxonomic profile",
    "standardisation",
    "merging",
]
dependencies = [
    "depinfo ~=2.2",
    "numpy",
    "pandas",
    "pandera",
    "taxopy",
    "typer",
]

[project.urls]
Homepage = "https://github.com/taxprofiler/taxpasta"
Documentation = "https://taxpasta.readthedocs.io"
"Source Code" = "https://github.com/taxprofiler/taxpasta"
"Bug Tracker" = "https://github.com/taxprofiler/taxpasta/issues"
Download = "https://pypi.org/project/taxpasta/#files"

[project.scripts]
taxpasta = "taxpasta.infrastructure.cli:app"

[project.optional-dependencies]
all = ["biom-format >=2.1.16,<3", "odfpy", "openpyxl", "pyarrow", "rich"]
arrow = ["pyarrow"]
biom = ["biom-format >=2.1.16,<3"]
ods = ["odfpy"]
parquet = ["pyarrow"]
rich = ["rich"]
xlsx = ["openpyxl"]

[dependency-groups]
style = ["pydoclint", "ruff"]
types = ["mypy"]
docs = [
    "bash-kernel",
    "jupyter",
    "tabulate",
    "mkdocs-material ~=9.5",
    "mkdocstrings[python] ~=1.0",
    "mkdocs-awesome-pages-plugin ~=2.9",
]
tests = ["pytest", "pytest-cov", "pytest-raises", "pytest-xdist"]

################################################################################
# Tool Configuration
################################################################################

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/taxpasta"]

[tool.hatch.build.hooks.vcs]
version-file = "src/taxpasta/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D107",   # 'Missing docstring in __init__' ignored because pydoclint wants us to document the class instead.
    "D203",   # '1 blank line required before class docstring' ignored because we want no blank line.
    "D212",   # 'Multi-line docstring summary should start at the first line' ignored because we want the summary to start on the second line.
    "D407",   # 'Missing dashed underline after section' ignored because Google style docstrings don't underline.
    "ANN002", # 'Missing type annotation for {*args} in method'.
    "ANN003", # 'Missing type annotation for {*kwargs} in method'.
]
exclude = ["src/taxpasta/_version.py"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "E401", # 'Multiple imports on one line'
    "E402", # 'Module level import not at top of file'
    "F401", # 'Imported but unused'
    "I001", # 'Import block is un-sorted or un-formatted' ignored because we may have to import in a particular, not-alphabetical order.
]
"tests/**/*.py" = [
    "S101",    # 'Use of assert detected' ignored because we are using pytest.
    "INP001",  # 'Insecure input' ignored because we are testing.
    "ANN201",  # 'Missing type annotation for {return}' ignored because all tests return `None`.
    "PLR2004", # Magic numbers are okay in tests.
    "FBT001",  # Boolean positional arguments are fine in tests.
]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["src", "taxpasta"]
lines-after-imports = 2

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
exclude = "_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["raises"]

[tool.coverage.paths]
source = ["src/taxpasta", "*/site-packages/taxpasta"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/taxpasta/_version.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
precision = 2


[tool.mypy]
plugins = ["pydantic.mypy"]

# Stop mypy from complaining about missing types from imports.
[[tool.mypy.overrides]]
module = [
    "biom.*",
    "numpy.*",
    "odf.*",
    "openpyxl.*",
    "pandas.*",
    "pandera.*",
    "pyarrow.*",
    "rich.*",
    "taxopy.*",
    "typer.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

################################################################################
# Hatch Environments
################################################################################

[tool.hatch.env]
requires = ["hatch-pip-compile"]

[tool.hatch.envs.default]
description = """
Base environment with default configuration values.

All environments inheriting from the default also inherit the configuration values set
here.
"""
type = "pip-compile"
lock-filename = "requirements/requirements-{env_name}.txt"
pip-compile-constraint = "dev"
pip-compile-hashes = true
pip-compile-resolver = "uv"
pip-compile-installer = "uv"
features = ["all"]

[tool.hatch.envs.no-install]
description = """A base environment for use cases that do not install the project."""
skip-install = true
features = []

[tool.hatch.envs.dev]
description = """Development environment."""
dependency-groups = ["style", "types", "docs", "tests"]

[tool.hatch.envs.style]
description = """Check the style of the codebase."""
template = "no-install"
dependency-groups = ["style"]

[tool.hatch.envs.style.scripts]
docstrings = ["pydoclint src", "pydoclint tests"]
code = "ruff check {args}"
format = "ruff format {args}"
fix = "ruff check --fix {args}"
check = ["docstrings", "code"]

[tool.hatch.envs.audit]
description = """Check dependencies for security vulnerabilities."""
extra-dependencies = ["pip-audit"]

[tool.hatch.envs.audit.scripts]
check = ["pip-audit"]

[tool.hatch.envs.types]
description = """Check the static types of the codebase."""
dependency-groups = ["types"]

[tool.hatch.envs.types.scripts]
check = ["mypy src/taxpasta"]

[tool.hatch.envs.docs]
description = """Build or serve the documentation."""
dependency-groups = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build {args:--clean --strict}"
serve = "mkdocs serve {args}"

[tool.hatch.envs.distribution]
description = """Test the source and wheel distribution of the package."""
template = "no-install"
dependencies = ["pip", "twine"]
builder = true

[tool.hatch.envs.distribution.scripts]
check = ["pip check", "hatch build {args:--clean}", "twine check dist/*"]

[tool.hatch.envs.tests]
description = """Run the unit tests."""
dependency-groups = ["tests"]

[tool.hatch.envs.tests.scripts]
run = "pytest {args:--cov=taxpasta --cov-report=term-missing}"

[[tool.hatch.envs.tests.matrix]]
python = ["3.11", "3.12", "3.13", "3.14"]
