[metadata]
name = taxpasta
url = https://github.com/taxprofiler/taxpasta
download_url = https://pypi.org/project/taxpasta/
project_urls =
    Source Code = https://github.com/taxprofiler/taxpasta
    Documentation = https://taxpasta.readthedocs.io
    Bug Tracker = https://github.com/taxprofiler/taxpasta/issues
author = Moritz E. Beber, Maxime Borry, Jianhong Ou, Sofia Stamouli
author_email = "Moritz E. Beber <moritz.beber@posteo.de>, Maxime Borry <maxime_borry@eva.mpg.de>, Jianhong Ou <jianhong.ou@duke.edu>, Sofia Stamouli <sofia.stamouli@scilifelab.se>"
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache-2.0
description = TAXonomic Profile Aggregation and STAndardisation
long_description = file: README.md
long_description_content_type = text/markdown
keywords =

[options]
zip_safe = True
install_requires =
    depinfo ~=2.1
    pandas ~=1.4
    pandera ~=0.11
    typer ~=0.4
python_requires = >=3.8
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.entry_points]
console_scripts =
    taxpasta = taxpasta.infrastructure.cli:app

[options.packages.find]
where = src

[options.package_data]
taxpasta =
    py.typed

[options.extras_require]
rich =
    rich
development =
    black
    isort
    tox

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/taxpasta/_version.py
versionfile_build = taxpasta/_version.py
tag_prefix =

